--- a/cloudiness.html
+++ b/cloudiness.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <title>Web Visualization Dashboard</title>
+    <title>Cloudiness</title>
 
      <!--CSS Link-->
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -22,42 +22,45 @@
   </head>
   
   <body>
-    <!-- Navigation Section -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html" style="color: white">Latitude</a>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="Comparisons.html">Comparisons</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Data.html">Data</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Plots
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="humidity.html">Humidity</a>
-              <a class="dropdown-item" href="max_temperature.html">Temperature</a>
-              <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
+<!-- Navigation Section -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html" style="color: white">Latitude</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="Comparisons.html">Comparisons</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Data.html">Data</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Plots
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+          <a class="dropdown-item" href="humidity.html">Humidity</a>
+          <a class="dropdown-item" href="max_temperature.html">Temperature</a>
+          <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 
    
       <!-- Content here -->
     
     <div class="container">
-    <div class="row">
+     <div class="row">
       <div class="col-md-7" style="background-color:white">
-        <h3 style="color: rgb(43, 201, 201)">Cloudiness</h3>
+        <h3 style="color: #2bc9c9">Cloudiness</h3>
         <hr></hr>
         <div class="thumbnail">
-          <img src="resources/assets/images/Fig3.png" alt="..." class="vizualization rounded float-left" width=50%>
+          <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" class="vizualization rounded float-left" width=50%>
         </div>
         <div class="box">
             <p>In this graph, we see there is no correlation between latitude and cloudiness.
@@ -74,22 +77,20 @@
       <h3 style="color: rgb(43, 201, 201)">Visualizations</h3>
       <hr></hr>
       <div class="row">
-        <div class="col-3 col-md-6"><a href="max_temperature.html"><img src="Resources/assets/images/Fig1.png" class="img-fluid" alt=""></div> 
-        <div class="col-3 col-md-6"><a href="humidity.html"><img src="Resources/assets/images/Fig2.png" class="img-fluid" alt=""></div>
-        <div class="col-3 col-md-6"><a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" class="img-fluid" alt=""></div>
-        <div class="col-3 col-md-6"><a href="wind_speed.html"><img src="Resources/assets/images/Fig4.png" class="img-fluid" alt=""></div> 
+        <div class="col-3 col-md-6"><a href="max_temperature.html"><img src="Resources/assets/images/Fig1.png" class="img-fluid" alt="temperature"></div> 
+        <div class="col-3 col-md-6"><a href="humidity.html"><img src="Resources/assets/images/Fig2.png" class="img-fluid" alt="humidity"></div>
+        <div class="col-3 col-md-6"><a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" class="img-fluid" alt="cloudiness"></div>
+        <div class="col-3 col-md-6"><a href="wind_speed.html"><img src="Resources/assets/images/Fig4.png" class="img-fluid" alt="wind speed"></div> 
     </div>
    </div> 
   </div>  
-
+</div>
 
   <!-- Start of footer -->
 <footer class="page-footer font-small footer-dark">
   <div class="footer-copyright text-center py-3">© Copyright UR Data Bootcamp 2021</div>
 </footer>
-</body>
-</html>
   <!-- End of footer -->    
 
-</body>
+ </body>
 </html>
