--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -22,36 +22,35 @@
   </head>
   
   <body>
-    <!-- Navigation Section -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html" style="color: white">Latitude</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+<!-- Navigation Section -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html" style="color: white">Latitude</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="Comparisons.html">Comparisons</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Data.html">Data</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Plots
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+          <a class="dropdown-item" href="humidity.html">Humidity</a>
+          <a class="dropdown-item" href="max_temperature.html">Temperature</a>
+          <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-            <a class="nav-link" href="Comparisons.html">Comparisons</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Data.html">Data</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Plots
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="humidity.html">Humidity</a>
-              <a class="dropdown-item" href="max_temperature.html">Temperature</a>
-              <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-   
     <!-- Content here -->
     <div class="container">
 
@@ -60,7 +59,7 @@
         <h3 style="color: rgb(43, 201, 201)">Summary: Latitude vs X</h3>
         <hr></hr>
         <div class="thumbnail">
-          <img src="resources/assets/images/Fig1.png" alt="..." class="vizualization rounded float-left" width=50%>
+          <img src="Resources/assets/images/Fig1.png" alt="temperature" class="vizualization rounded float-left" width=50%>
         </div>
         <div class="box">
             <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
@@ -79,20 +78,19 @@
           <h3 style="color: rgb(43, 201, 201)">Visualizations</h3>
           <hr></hr>
           <div class="row">
-            <div class="col-3 col-md-6"><a href="max_temperature.html"><img src="Resources/assets/images/Fig1.png" class="img-fluid" alt=""></div> 
-            <div class="col-3 col-md-6"><a href="humidity.html"><img src="Resources/assets/images/Fig2.png" class="img-fluid" alt=""></div>
-            <div class="col-3 col-md-6"><a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" class="img-fluid" alt=""></div>
-            <div class="col-3 col-md-6"><a href="wind_speed.html"><img src="Resources/assets/images/Fig4.png" class="img-fluid" alt=""></div> 
+            <div class="col-3 col-md-6"><a href="max_temperature.html"><img src="Resources/assets/images/Fig1.png" class="img-fluid" alt="temperature"></div> 
+            <div class="col-3 col-md-6"><a href="humidity.html"><img src="Resources/assets/images/Fig2.png" class="img-fluid" alt="humidity"></div>
+            <div class="col-3 col-md-6"><a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" class="img-fluid" alt="cloudiness"></div>
+            <div class="col-3 col-md-6"><a href="wind_speed.html"><img src="Resources/assets/images/Fig4.png" class="img-fluid" alt="wind speed"></div> 
         </div>
        </div> 
       </div>  
+    </div>
 
   <!-- Start of footer -->
   <footer class="page-footer font-small footer-dark">
     <div class="footer-copyright text-center py-3">© Copyright UR Data Bootcamp 2021</div>
   </footer>
-  </body>
-  </html>
     <!-- End of footer -->       
   
   </body>
